--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     font-family: 'Fredoka', sans-serif;    
 }
 body{
-    background-color: #d6e1ff; 
+    background-image: url(desafio/design/pattern-background-desktop.png);
+    background-color: hsl(225, 100%, 98%); 
     display: flex; 
     align-items: center;
     justify-content: center;
@@ -23,11 +24,12 @@ body{
 } 
 h1{
     text-align: center;
+    color: hsl(223, 47%, 23%);
 }
 p{
     text-align: center;
     font-size: 20px;
-    color: gray;
+    color: hsl(224, 23%, 55%);
 }
 .grid{
     display: grid;
@@ -35,7 +37,7 @@ p{
     margin: auto;
     justify-content: center;
     grid-template-columns: 100px 100px 100px;
-    background-color: #f5f5f5;
+    background-color: hsl(225, 100%, 98%);
     grid-template-rows: 80px;
 }
 .item-1{
@@ -55,23 +57,32 @@ p{
 .item-3 p {
     color: blue;
     text-align: center;
-   
-
 }
 
 button {
     width: 80%;
     margin: 10px 10% auto 10%;
-    font-size: 18px; 
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    font-weight: bold;
     border: 0;
     background: radial-gradient( 100% 100% at 100% 0%, #89E5FF 0%, #5468FF 100% );     
     height: 2.6em;  
+    box-shadow: 0px 4px rgba(56, 42, 255, 0.2);
+}
+
+.btn button p {
+    margin: 0;
+    font-weight: bold;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px; 
+    font-family: Arial, Helvetica, sans-serif;
+   
+}
+
+ .btn button:hover {
+    background: red;
 }
 
 .btn p {
     font-weight: bold;
 }
-  
